packages/base/data/test/error/cabecadeboi-neigh-line-invalid1.gal
0 121 cabecadeboi900.shp object_id_ 
 	 
C00L01 C00L02 C01L00 C01L01 C02L00 
